--- a/paginas/profesionales.html
+++ b/paginas/profesionales.html
@@ -49,7 +49,7 @@
                 
                         <div class="grid_profesionales-1" >
                             
-                            <h4 class="profesionales-subtitulo" > Profesional 1 </h4>
+                            <h4 class="profesionales-subtitulo" > Analia Leotta</h4>
                             <img src="../imagenes/profesional1.jpg" alt="profesional1" width="200" height="200">
                             <p class="profesionales-presentacion"> Egresada UBA, 2001</p>
                             <p class="profesionales-presentacion"> Francés </p>
@@ -57,7 +57,7 @@
                         </div>
 
                         <div class="grid_profesionales-2"> 
-                            <h4 class="profesionales-subtitulo"> Profesional 2</h4>
+                            <h4 class="profesionales-subtitulo"> Micaela Ramos </h4>
                             <img src="../imagenes/profesional2.jpg" alt="profesional 2" width="200" height="200">
                             <p class="profesionales-presentacion"> Egresada UBA, 2000 </p>
                             <p class="profesionales-presentacion"> Inglés, alemán </p>
@@ -65,7 +65,7 @@
 
                         <div class="grid_profesionales-3">
 
-                            <h4 class="profesionales-subtitulo" > Profesional 3 </h4>
+                            <h4 class="profesionales-subtitulo" > Franco Canton </h4>
                             <img src="../imagenes/profesional3.png" alt="profesional 2" width="200" height="200">
                             <p class="profesionales-presentacion">Egresado UCA, 1995</p>
                             <p class="profesionales-presentacion"> Árabe </p>
