inculyendo rspsv en index, contacto y prof

--- a/paginas/profesionales.html
+++ b/paginas/profesionales.html
@@ -2,12 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <meta name="keywords" content="traductores, idiomas, libros, freelance, traducción, profesionales">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Profesionales</title>
+
     <link rel="stylesheet" href="../css/estilos.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
+
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    
     <link href="https://fonts.googleapis.com/css2?family=Anek+Latin:wght@100&family=Merriweather:wght@300&family=Montserrat:wght@100&family=Smooch&family=Uchen&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -16,19 +26,19 @@
         <nav class="nav">
             <ul class="nav__lista">
                 <li> 
-                    <a class="nav__item" href="../index.html">Inicio</a>
+                    <a class="nav__item mmenu" href="../index.html">Inicio</a>
                 </li>
                 <li>
-                    <a class="nav__item"  href="./profesionales.html">Profesionales</a>
+                    <a class="nav__item mmenu"  href="./profesionales.html">Profesionales</a>
                 </li>
                 <li>
-                    <a class="nav__item" href="./objetivo.html"> Objetivo</a>
+                    <a class="nav__item mmenu" href="./objetivo.html"> Objetivo</a>
                 </li>
                 <li>
-                    <a class="nav__item" href="./obras.html"> Obras </a>
+                    <a class="nav__item mmenu" href="./obras.html"> Obras </a>
                 </li>
                 <li>
-                    <a class="nav__item" href="./contacto.html"> Contacto </a>
+                    <a class="nav__item mmenu" href="./contacto.html"> Contacto </a>
                 </li>
             </ul>
         </nav>
@@ -85,6 +95,7 @@
           </svg>
         </a>
     </div>  
+    
   <footer class="propiedades-bajo">
     <p class="textoPie"> Derechos reservados - Traductores </p>
 </footer>  
