--- a/index.html
+++ b/index.html
@@ -2,17 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"ce, traducción">
+
     <title>Inicio</title>
+
     <link rel="stylesheet" href="./css/estilos.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
+
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
     <link href="https://fonts.googleapis.com/css2?family=Anek+Latin:wght@100&family=Merriweather:wght@300&family=Montserrat:wght@100&family=Smooch&family=Uchen&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
     <header class="header">
+            
         <img src="./imagenes/logo.png" alt="logo" width="50" height="50">
         <nav class="nav">
             <ul class="nav__lista">
