--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -2,19 +2,33 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="keywords" content="traductores, idiomas, libros, freelance, traducción, contacto">
+
     <title>Contacto</title>
+
     <link rel="stylesheet" href="../css/estilos.css">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
+
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
     <link href="https://fonts.googleapis.com/css2?family=Anek+Latin:wght@100&family=Merriweather:wght@300&family=Montserrat:wght@100&family=Smooch&family=Uchen&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header class="header">
+
         <img src="../imagenes/logo.png" alt="logo" width="50" height="50">
+
         <nav class="nav">
+            
             <ul class="nav__lista">
                 <li> 
                     <a class="nav__item" href="../index.html">Inicio</a>
@@ -35,13 +49,18 @@
         </nav>
     </header>
     <main class="fondocontacto">
-        <div >
-            <p class="contacto"> Contactenos </p>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.8629027395987!2d-58.3938255844941!3d-34.58233538046506!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccbbe57694af1%3A0x3be62989f4e4adcf!2sFacultad%20de%20Derecho%20(UBA)!5e0!3m2!1ses-419!2sar!4v1656013790835!5m2!1ses-419!2sar" width="100%" height="300px" style="border:1px solid black;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" ></iframe>
-        </div>     
+        <div class="container">
+            <div class="row">
+
+                <p class="contacto col-xs-6 col-md-12 col-lg-12"> Contactenos </p>
+                <iframe class="col-xs-6 col-md-12 col-lg-12" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.8629027395987!2d-58.3938255844941!3d-34.58233538046506!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccbbe57694af1%3A0x3be62989f4e4adcf!2sFacultad%20de%20Derecho%20(UBA)!5e0!3m2!1ses-419!2sar!4v1656013790835!5m2!1ses-419!2sar" width="100%" height="300px" style="border:1px solid black;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" ></iframe>
+        
+            </div>     
+        </div>
 
         <section>
-            <div  class="container" >
+
+            <div  class="container DetalleContainer" >
 
                 <div class="row">
 
