--- a/paginas/obras.html
+++ b/paginas/obras.html
@@ -2,22 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="keywords" content="traductores, idiomas, libros, freelance, traducción, obras, publicaciones">
+
     <title>Obras</title>
+
     <link rel="stylesheet" href="../css/estilos.css">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
     <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
+
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
     <link href="https://fonts.googleapis.com/css2?family=Anek+Latin:wght@100&family=Merriweather:wght@300&family=Montserrat:wght@100&family=Smooch&family=Uchen&display=swap" rel="stylesheet">
+
 </head>
-</head>
-<body class="p-3 m-0 border-0 bd-example">
+
+
+<body>
+
     <header class="header">
+
         <img src="../imagenes/logo.png" alt="logo" width="50" height="50">
+
         <nav class="nav">
+            
             <ul class="nav__lista">
                 <li> 
                     <a class="nav__item" href="../index.html">Inicio</a>
