--- a/index.html
+++ b/index.html
@@ -7,13 +7,23 @@
 
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"ce, traducción">
 
-    <title>Inicio</title>
+    <title>Inicio - Traductores</title>
+
+    <meta name="description" content="Bolsa de traductores para traducciones literarios y júridicas">
 
     <link rel="stylesheet" href="./css/estilos.css">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <link rel="shortcut icon" href="./imagenes/logo.png" type="image/x-icon">
 
     <link href="https://fonts.googleapis.com/css2?family=Anek+Latin:wght@100&family=Merriweather:wght@300&family=Montserrat:wght@100&family=Smooch&family=Uchen&display=swap" rel="stylesheet">
 
@@ -24,23 +34,23 @@
             
         <img src="./imagenes/logo.png" alt="logo" width="50" height="50">
         <nav class="nav">
-            <ul class="nav__lista">
-                <li>
-                    <a  class="nav__item" href="./index.html"> Inicio </a>
+            <ul class="nav justify-content-end">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
                 </li>
-                <li>
-                    <a class="nav__item" href="./paginas/profesionales.html"> Profesionales </a>
+                <li class="nav-item">
+                  <a class="nav-link" href="./paginas/profesionales.html">Profesionales</a>
                 </li>
-                <li>
-                    <a class="nav__item" href="./paginas/objetivo.html"> Objetivo</a>
+                <li class="nav-item">
+                  <a class="nav-link" href="./paginas/objetivo.html">Objetivo</a>
                 </li>
-                <li>
-                    <a class="nav__item" href="./paginas/obras.html"> Obras </a>
+                <li class="nav-item">
+                  <a class="nav-link" href="./paginas/obras.html" >Obras</a>
                 </li>
-                <li>
-                    <a class="nav__item" href="./paginas/contacto.html"> Contacto </a>
-                </li>
-            </ul>
+                <li class="nav-item">
+                    <a class="nav-link" href="./paginas/contacto.html" >Contacto</a>
+                  </li>
+              </ul>
         </nav>
     </header>
     <main>
