--- a/paginas/objetivo.html
+++ b/paginas/objetivo.html
@@ -9,7 +9,18 @@
 
     <meta name="keywords" content="traductores, idiomas, libros, freelance, traducción, objetivo">
 
-    <title>Objetivo</title>
+    <meta name="description" content="Bolsa de traductores para traducciones literarios y júridicas">
+
+    <title>Objetivo - Traductores</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+
+
+    <link rel="shortcut icon" href="../imagenes/logo.png" type="image/x-icon">
 
     <link rel="stylesheet" href="../css/estilos.css">
 
@@ -23,24 +34,24 @@
 <body>
     <header class="header">
         <img src="../imagenes/logo.png" alt="logo" width="50" height="50">
-        <nav class="nav">
-            <ul class="nav__lista">
-                <li> 
-                    <a class="nav__item" href="../index.html">Inicio</a>
+        <nav>
+            <ul class="nav justify-content-end">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
                 </li>
-                <li>
-                    <a class="nav__item"  href="./profesionales.html">Profesionales</a>
+                <li class="nav-item">
+                  <a class="nav-link" href="./profesionales.html">Profesionales</a>
                 </li>
-                <li>
-                    <a class="nav__item" href="./objetivo.html"> Objetivo</a>
+                <li class="nav-item">
+                  <a class="nav-link" href="./objetivo.html">Objetivo</a>
                 </li>
-                <li>
-                    <a class="nav__item" href="./obras.html"> Obras </a>
+                <li class="nav-item">
+                  <a class="nav-link" href="./obras.html" >Obras</a>
                 </li>
-                <li>
-                    <a class="nav__item" href="./contacto.html"> Contacto </a>
-                </li>
-            </ul>
+                <li class="nav-item">
+                    <a class="nav-link" href="./contacto.html" >Contacto</a>
+                  </li>
+              </ul>
         </nav>
     </header>  
     <main>
