--- a/paginas/objetivo.html
+++ b/paginas/objetivo.html
@@ -60,7 +60,7 @@
           
             <div class="grid_objetivo-texto">
                 <h1 class="propiedades-titulo">Nuestros objetivos</h1>
-                <p class="propiedades-texto"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam odio molestias expedita necessitatibus culpa sed porro minus natus omnis iste fugiat dicta blanditiis iusto, voluptate cum deleniti quaerat laboriosam! Quidem?</p>
+                <p class="propiedades-texto">Nuestros objetivos consisten en ofrecer un trato personalizado a cada cliente para así ajustarnos a sus necesidades, ofrecer ayuda de forma activa, responder con rapidez y poder dar un proyecto final con la mejor calidad posible.</p>
             </div>
 
             <div class="grid_objetivo-video">
