arreglé objetivos, falta footer y buttom obras

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </main>
   
 
-    <footer  class="inicio">
+    <footer  class="propiedades-bajo">
         <p class="textoPie"> Derechos reservados - Traductores </p>
 
     </footer>
