--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"ce, traducción">
     
-    <meta name="description" content="Bolsa de traductores para traducciones literarios y júridicas">
+    <meta name="description" content="Bolsa de traductores para traducciones literarios y jurídicas">
     
     <title>Inicio - Traductores</title>
 
