--- a/paginas/obras.html
+++ b/paginas/obras.html
@@ -9,7 +9,7 @@
 
     <meta name="keywords" content="traductores, idiomas, libros, freelance, traducción, obras, publicaciones">
 
-    <meta name="description" content="Bolsa de traductores para traducciones literarios y júridicas">
+    <meta name="description" content="Bolsa de traductores para traducciones literarios y jurídicas">
     
     <title>Obras</title>
 
