--- a/paginas/objetivo.html
+++ b/paginas/objetivo.html
@@ -9,7 +9,7 @@
 
     <meta name="keywords" content="traductores, idiomas, libros, freelance, traducción, objetivo">
 
-    <meta name="description" content="Bolsa de traductores para traducciones literarios y júridicas">
+    <meta name="description" content="Bolsa de traductores para traducciones literarios y jurídicas">
 
     <title>Objetivo - Traductores</title>
 
