me llega el email

--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -135,7 +135,7 @@
 
                                     <div>
                                         <label for="email"> Email: </label>
-                                        <input type="email" id="email" name="email" placeholder="Ingrese su email" pattern=".+@gmail.com" required>
+                                        <input type="email" id="email" name="email" placeholder="Ingrese su email" required>
                                     </div>
 
                                         
