--- a/paginas/profesionales.html
+++ b/paginas/profesionales.html
@@ -33,25 +33,49 @@
 <body>
     <header class="header">
         <img src="../imagenes/logo.png" alt="logo" width="50" height="50">
-        <nav>
-            <ul class="nav justify-content-end">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./profesionales.html">Profesionales</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./objetivo.html">Objetivo</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="./obras.html" >Obras</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./contacto.html" >Contacto</a>
-                  </li>
-              </ul>
-        </nav>
+        <nav class="navbar fixed">
+
+            <div class="container-fluid">
+  
+              <a class="navbar-brand" href="#"></a>
+  
+              <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+  
+              <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+  
+                <div class="offcanvas-header">
+                  <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+  
+                <div class="offcanvas-body">
+                  <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="./objetivo.html">Objetivos</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="./profesionales.html">Profesionales</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="./obras.html">Obras</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="./contacto.html">Contacto</a>
+                    </li>
+                  </ul>
+                  <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </nav>
     </header>  
     <main>
         <section> 
