--- a/paginas/objetivo.html
+++ b/paginas/objetivo.html
@@ -101,7 +101,7 @@
     
     <div class="whatsapp">
       <a href="http://wa.me/541135687262" target="_blank">
-      <img src="./imagenes/logo-wasap.png" width="60" height="60">
+      <img src="../imagenes/logo-wasap.png" width="55" height="55">
       </a>
     </div>   
      
