--- a/paginas/obras.html
+++ b/paginas/obras.html
@@ -40,7 +40,7 @@
 
         <img src="../imagenes/logo.png" alt="logo" width="50" height="50">
 
-        <nav class="navbar fixed">
+        <nav class="navbar navbar-dark fixed">
 
           <div class="container-fluid">
 
@@ -59,7 +59,7 @@
               <div class="offcanvas-body">
                 <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                    <a class="nav-link" href="../index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="./objetivo.html">Objetivos</a>
