--- a/paginas/profesionales.html
+++ b/paginas/profesionales.html
@@ -33,7 +33,7 @@
 <body>
     <header class="header">
         <img src="../imagenes/logo.png" alt="logo" width="50" height="50">
-        <nav class="navbar fixed">
+        <nav class="navbar navbar-dark fixed">
 
             <div class="container-fluid">
   
@@ -51,8 +51,9 @@
   
                 <div class="offcanvas-body">
                   <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+
                     <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                      <a class="nav-link" href="../index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="./objetivo.html">Objetivos</a>
