--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
 
 <body>
     <header class="header">
-            
-        <img src="./imagenes/logo.png" alt="logo" width="50" height="50">
+
+      <a href="./index.html"> <img src="../imagenes/logo.png" alt="logo" width="50" height="50"> </a>
+      
         <nav class="navbar navbar-dark fixed">
 
           <div class="container-fluid">
