--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -33,7 +33,8 @@
 </head>
 <body>
     <header class="header">
-        <img src="../imagenes/logo.png" alt="logo" width="50" height="50">
+      <a href="../index.html"> <img src="../imagenes/logo.png" alt="logo" width="50" height="50"> </a>
+
         <nav class="navbar navbar-dark fixed">
 
             <div class="container-fluid">
