--- a/paginas/obras.html
+++ b/paginas/obras.html
@@ -38,7 +38,7 @@
 
     <header class="header">
 
-        <img src="../imagenes/logo.png" alt="logo" width="50" height="50">
+      <a href="../index.html"> <img src="../imagenes/logo.png" alt="logo" width="50" height="50"> </a>
 
         <nav class="navbar navbar-dark fixed">
 
