--- a/paginas/profesionales.html
+++ b/paginas/profesionales.html
@@ -32,7 +32,7 @@
 </head>
 <body>
     <header class="header">
-        <img src="../imagenes/logo.png" alt="logo" width="50" height="50">
+      <a href="../index.html"> <img src="../imagenes/logo.png" alt="logo" width="50" height="50"> </a>
         <nav class="navbar navbar-dark fixed">
 
             <div class="container-fluid">
