--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
 
 <body>
     <header class="header">
-
-      <a href="./index.html"> <img src="../imagenes/logo.png" alt="logo" width="50" height="50"> </a>
+    <img src="../imagenes/logo.png" alt="logo" width="50" height="50">
       
         <nav class="navbar navbar-dark fixed">
 
