--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"ce, traducción">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
     
     <meta name="description" content="Bolsa de traductores para traducciones literarios y jurídicas">
     
