--- a/paginas/objetivo.html
+++ b/paginas/objetivo.html
@@ -31,7 +31,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Anek+Latin:wght@100&family=Merriweather:wght@300&family=Montserrat:wght@100&family=Smooch&family=Uchen&display=swap" rel="stylesheet">
 
 </head>
-<body>
+<body class="emparejar">
     <header class="header">
       <a href="../index.html"> <img src="../imagenes/logo.png" alt="logo" width="50" height="50"> </a>
         <nav class="navbar navbar-dark fixed">
@@ -77,20 +77,20 @@
           </div>
         </nav>
     </header>  
-    <main>
-        <section class="containerO"> 
+    <main class="flex">
+        <section class="container text-center" > 
            
-          <div class="row">
+          <div class="row justify-content-around fila">
 
-            <div class="col-xs-12 col-md-12 col-lg-6 objetivos">
+            <div class="col-5 objetivos">
 
                 <h1 class="propiedades-titulo">Nuestros objetivos</h1>
                 <p class="propiedades-texto">Nuestros objetivos consisten en ofrecer un trato personalizado a cada cliente para así ajustarnos a sus necesidades, ofrecer ayuda de forma activa, responder con rapidez y poder dar un proyecto final con la mejor calidad posible.</p>
             
             </div>
 
-            <div class="col-xs-12 col-md-12 col-lg-6 video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/YplHOSDKbwc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="col-5 ">
+                <iframe  class="video" width="700" height="415" src="https://www.youtube.com/embed/YplHOSDKbwc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
 
           </div>
