--- a/paginas/objetivo.html
+++ b/paginas/objetivo.html
@@ -78,18 +78,18 @@
         </nav>
     </header>  
     <main class="flex">
-        <section class="container text-center" > 
+        <section class="container text-center cont_objetivo" > 
            
           <div class="row justify-content-around fila">
 
-            <div class="col-5 objetivos">
+            <div class=" col-xs-12 col-lg-5 objetivos">
 
                 <h1 class="propiedades-titulo">Nuestros objetivos</h1>
                 <p class="propiedades-texto">Nuestros objetivos consisten en ofrecer un trato personalizado a cada cliente para así ajustarnos a sus necesidades, ofrecer ayuda de forma activa, responder con rapidez y poder dar un proyecto final con la mejor calidad posible.</p>
             
             </div>
 
-            <div class="col-5 ">
+            <div class="col-xs-12  col-lg-5 ">
                 <iframe  class="video" width="700" height="415" src="https://www.youtube.com/embed/YplHOSDKbwc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
 
